# smart_git_commit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-smart-git-commit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-smart-git-commit/checklists/: requirements.md
specs/001-smart-git-commit/contracts/: cli-commands.md
src/smart_git_commit/: __init__.py  __main__.py  cli.py  exceptions.py  utils.py
src/smart_git_commit/analyzer/: __init__.py  style.py  tokenizer.py
src/smart_git_commit/config/: __init__.py  manager.py  models.py  wizard.py
src/smart_git_commit/generator/: __init__.py  engine.py
src/smart_git_commit/git/: __init__.py  diff.py  history.py  repository.py
src/smart_git_commit/llm/: __init__.py  client.py  prompts.py  provider.py
tests/: __init__.py
tests/fixtures/: mock_config.yaml
tests/fixtures/sample_diffs/: simple_addition.diff
tests/integration/: __init__.py  test_commit_flow.py  test_config_wizard.py  test_silent_mode.py
tests/unit/: __init__.py
tests/unit/test_cli/: test_help.py
tests/unit/test_config/: test_models.py
tests/unit/test_generator/: test_message.py
tests/unit/test_git/: test_context.py
